// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper Swiper base demo works fine 1`] = `
<base>
  <t-swiper
    autoplay="{{false}}"
    current="{{0}}"
    duration="{{500}}"
    interval="{{5000}}"
    list="{{
      Array [
        "https://tdesign.gtimg.com/site/swiper/01.png",
        "https://tdesign.gtimg.com/site/swiper/02.png",
        "https://tdesign.gtimg.com/site/swiper/03.png",
        "https://tdesign.gtimg.com/site/swiper/04.png",
        "https://tdesign.gtimg.com/site/swiper/05.png",
      ]
    }}"
    navigation="{{
      Object {
        "type": "dots",
      }
    }}"
    bind:change="onChange"
  />
</base>
`;

exports[`Swiper Swiper cards demo works fine 1`] = `
<cards>
  <wx-view
    class="card-theme"
  >
    <t-swiper
      autoplay="{{false}}"
      current="{{0}}"
      duration="{{500}}"
      interval="{{5000}}"
      list="{{
        Array [
          "https://tdesign.gtimg.com/site/swiper/01.png",
          "https://tdesign.gtimg.com/site/swiper/02.png",
          "https://tdesign.gtimg.com/site/swiper/03.png",
          "https://tdesign.gtimg.com/site/swiper/04.png",
          "https://tdesign.gtimg.com/site/swiper/05.png",
        ]
      }}"
      navigation="{{
        Object {
          "type": "dots",
        }
      }}"
      nextMargin="34px"
      previousMargin="34px"
      tClassNav="card-theme-nav"
      bind:change="onChange"
    />
    <wx-view
      class="box"
      style="height: 42px"
    />
    <t-swiper
      autoplay="{{false}}"
      class="scale-card-theme"
      current="{{0}}"
      duration="{{500}}"
      interval="{{5000}}"
      list="{{
        Array [
          "https://tdesign.gtimg.com/site/swiper/01.png",
          "https://tdesign.gtimg.com/site/swiper/02.png",
          "https://tdesign.gtimg.com/site/swiper/03.png",
          "https://tdesign.gtimg.com/site/swiper/04.png",
          "https://tdesign.gtimg.com/site/swiper/05.png",
        ]
      }}"
      navigation="{{
        Object {
          "type": "dots",
        }
      }}"
      nextMargin="34px"
      previousMargin="34px"
      tClassNav="card-theme-nav"
      tClassNextImage="scale-candidate"
      tClassPrevImage="scale-candidate"
      bind:change="onChange"
    />
  </wx-view>
</cards>
`;

exports[`Swiper Swiper custom demo works fine 1`] = `
<custom>
  <t-swiper
    autoplay="{{true}}"
    current="{{1}}"
    duration="{{500}}"
    interval="{{5000}}"
    list="{{
      Array [
        "https://tdesign.gtimg.com/site/swiper/01.png",
        "https://tdesign.gtimg.com/site/swiper/02.png",
        "https://tdesign.gtimg.com/site/swiper/03.png",
        "https://tdesign.gtimg.com/site/swiper/04.png",
        "https://tdesign.gtimg.com/site/swiper/05.png",
      ]
    }}"
  >
    <t-swiper-nav
      slot="nav"
      type="dots-bar"
    />
  </t-swiper>
</custom>
`;

exports[`Swiper Swiper fraction demo works fine 1`] = `
<fraction>
  <t-swiper
    autoplay="{{true}}"
    current="{{2}}"
    duration="{{500}}"
    interval="{{5000}}"
    list="{{
      Array [
        "https://tdesign.gtimg.com/site/swiper/01.png",
        "https://tdesign.gtimg.com/site/swiper/02.png",
        "https://tdesign.gtimg.com/site/swiper/03.png",
        "https://tdesign.gtimg.com/site/swiper/04.png",
        "https://tdesign.gtimg.com/site/swiper/05.png",
      ]
    }}"
    navigation="{{
      Object {
        "type": "fraction",
      }
    }}"
    paginationPosition="bottom-right"
  />
</fraction>
`;

exports[`Swiper Swiper nav-btn demo works fine 1`] = `
<nav-btn>
  <t-swiper
    autoplay="{{true}}"
    current="{{3}}"
    duration="{{500}}"
    interval="{{5000}}"
    list="{{
      Array [
        "https://tdesign.gtimg.com/site/swiper/01.png",
        "https://tdesign.gtimg.com/site/swiper/02.png",
        "https://tdesign.gtimg.com/site/swiper/03.png",
        "https://tdesign.gtimg.com/site/swiper/04.png",
        "https://tdesign.gtimg.com/site/swiper/05.png",
      ]
    }}"
    loop="{{false}}"
    navigation="{{
      Object {
        "showControls": true,
        "type": "",
      }
    }}"
  />
</nav-btn>
`;

exports[`Swiper Swiper vertical demo works fine 1`] = `
<vertical>
  <wx-view
    class="swiper-box"
  >
    <t-swiper
      autoplay="{{true}}"
      current="{{1}}"
      direction="vertical"
      duration="{{500}}"
      interval="{{5000}}"
      list="{{
        Array [
          "https://tdesign.gtimg.com/site/swiper/01.png",
          "https://tdesign.gtimg.com/site/swiper/02.png",
          "https://tdesign.gtimg.com/site/swiper/03.png",
          "https://tdesign.gtimg.com/site/swiper/04.png",
          "https://tdesign.gtimg.com/site/swiper/05.png",
        ]
      }}"
      navigation="{{
        Object {
          "type": "dots-bar",
        }
      }}"
      paginationPosition="right"
    />
  </wx-view>
  <wx-view
    class="swiper-box swiper-box-option"
  >
    <wx-view
      class="cell"
    >
      <wx-view
        class="label"
      >
        自动播放
      </wx-view>
      <wx-view
        class="option"
      >
        <t-switch
          tClass="swiper-switch"
          value="{{true}}"
          bind:change="onAutoplayChange"
        />
        <wx-view
          class="option-desc"
        >
          开
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="cell"
    >
      <wx-view
        class="label"
      >
        自动播放间隔时间(单位毫秒)
      </wx-view>
      <wx-view
        class="option"
      >
        <t-slider
          class="swiper-slider"
          label=""
          max="{{5000}}"
          min="{{1000}}"
          step="{{500}}"
          tClassBar="external-class-bar"
          value="{{5000}}"
          bind:change="onIntervalChange"
        />
        <wx-view
          class="option-desc"
        >
          5000
        </wx-view>
      </wx-view>
    </wx-view>
    <wx-view
      class="cell"
    >
      <wx-view
        class="label"
      >
        动画持续时间(单位毫秒)
      </wx-view>
      <wx-view
        class="option"
      >
        <t-slider
          class="swiper-slider"
          label=""
          max="{{2000}}"
          min="{{200}}"
          step="{{100}}"
          tClassBar="external-class-bar"
          value="{{500}}"
          bind:change="onDurationChange"
        />
        <wx-view
          class="option-desc"
        >
          500
        </wx-view>
      </wx-view>
    </wx-view>
  </wx-view>
</vertical>
`;
